@@ -1,3 +1,7 @@
+08/10/2009
+- update of mb support in plugins
+
+
 08/09/2009
 - fixed problems with doublequoted strings at name attribute of {block} tag
 - bugfix at scope attribute of {append} tag
